# Brew-Machine-MkIV

./: .cproject  .project  CMakeLists.txt  Flow1.c  Flow1.h  FreeRTOSConfig.h  I2C-IO.c  I2C-IO.h  I2C-IO_old.c  I2C-IO_old.h  LICENSE  Makefile  MashWater.c  MashWater.h  MenuExamples.c  MenuExamples.h  README.md  RTOSBrew.axf  RTOSBrew.map  SerialnterfaceAPI.xlsx  boil.c  boil.h  boil_backup.c  boil_valve.c  boil_valve.h  brew.c  brew.h  chiller_pump.c  chiller_pump.h  console.c  console.h  crane.c  crane.h  diag_pwm.c  diag_pwm.h  diag_temps.c  diag_temps.h  hlt.c  hlt.h  hlt_pump.c  (+26 more)
CM3/: core_cm3.c  startup_stm32f10x_hd.c  stm32f10x_it.c
Debug/: RTOSBrew.map  a.out  b.out  foo.axf  main.d  makefile  menu.d  menu.good  menu.good.objdump  menu.o.objdump  sources.mk  stf_syscalls_minimal.d  stm32_freertos_example  subdir.mk
Debug/CM3/: core_cm3.d  startup_stm32f10x_hd.d  stm32f10x_it.d  subdir.mk  system_stm32f10x.d
Debug/FreeRTOS/Source/: list.d  queue.d  subdir.mk  tasks.d
Debug/FreeRTOS/Source/portable/GCC/ARM_CM3/: port.d  subdir.mk
Debug/FreeRTOS/Source/portable/MemMang/: heap_2.d  subdir.mk
Debug/drivers/: adc.d  ds1820.d  lcd.d  leds.d  serial.d  speaker.d  subdir.mk  timer.d  touch.d
Debug/startup/gcc_FreeRTOS/: subdir.mk
Debug/std_periph_drivers/src/: misc.d  stm32f10x_adc.d  stm32f10x_flash.d  stm32f10x_fsmc.d  stm32f10x_gpio.d  stm32f10x_rcc.d  stm32f10x_spi.d  stm32f10x_tim.d  stm32f10x_usart.d  subdir.mk
FreeRTOS/Source/: tasks.c
Release/: makefile  sources.mk  subdir.mk
Release/CM3/: subdir.mk
Release/FreeRTOS/Source/: subdir.mk
Release/FreeRTOS/Source/portable/GCC/ARM_CM3/: subdir.mk
Release/FreeRTOS/Source/portable/GCC/ARM_CM3_MPU/: subdir.mk
Release/FreeRTOS/Source/portable/MemMang/: subdir.mk
Release/drivers/: subdir.mk
Release/startup/gcc_FreeRTOS/: subdir.mk
Release/std_periph_drivers/src/: subdir.mk
drivers/: adc.h  buffer.c  buffer.h  button.c  button.h  ds1820.c  ds1820.h  lcd.c  lcd.h  leds.c  leds.h  serial.c  serial.h  speaker.c  timer.c  touch.c
jtag/: busblaster.cfg
std_periph_drivers/src/: stm32f10x_i2c.c
